# Xyzbot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config  pyproject.toml  requirements.in  requirements.txt  setup.sh
Data/: get_video_link.py  new_video_added.py  video_links_20241221175525.json  yt_transcript.py
Data/transcripts/: -OBCwiPPfEU_20241225194747.txt  -e9ErUozQo4_20241225194903.txt  0Dtt95_xabw_20241225194252.txt  0RYyQRQFgFk_20241225194532.txt  1CxJVdeyltw_20241225194614.txt  1SXDXdngX2M_20241225194316.txt  1Wo6SqLNmLk_20241225194845.txt  29n0WG317tM_20241225194511.txt  3ZGItIAUQmI_20241225194719.txt  3gtvNYa3Nd8_20241225194531.txt  4AwyVTHEU3s_20241225194904.txt  4F_RBc1akC8_20241225194724.txt  4RFEkGKKhdE_20241225194907.txt  50BZQRT1dAg_20241225194403.txt  5tYR7e5Wpyc_20241225194238.txt  62lVH-6xYGY_20241225194250.txt  6P8hrzjnetU_20241225194336.txt  6RZbGrq9BxE_20241225194306.txt  6YLdlK2hYnw_20241225194328.txt  6ZrlsVx85ek_20241225194758.txt  79p1X_7rAMo_20241225194630.txt  7TkGDj4LaOU_20241225194244.txt  8N7mdkrXgbc_20241225194338.txt  8qaBpM73NSk_20241225194409.txt  AtChcxeaukQ_20241225194646.txt  BMTt8gSl13s_20241225194836.txt  C3X0bUAiluE_20241225194259.txt  C5KpIXjpzdY_20241225194400.txt  CD0bRU1e1ZM_20241225194425.txt  CDUetQMKM6g_20241225194454.txt  CQlTmOFM4Qs_20241225194550.txt  (+119 more)
Example/: rag_example.py
Prompts/: huberman_prompt.py  summary_prompt.py
Rag/: chunking.py  corefrence.py  embeddings.py  error_log.txt  rag.py  rag_pipeline.py  summarization.py
ui/: app.py
utils/: corefrence.py  get_link.py
(+11 files in other folders)
