[project]
name = "xyzbot"
version = "0.1.0"
description = "A rag application"
authors = [
    {name = "Angel njlghmr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python =">=3.11,<3.12"
dependencies = [
    "pyarrow (>=19.0.0,<20.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pendulum (>=3.0.0,<4.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "langchain (>=0.3.16,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "langchain-chroma (>=0.2.1,<0.3.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "chromadb (>=0.4.14)",
    "pypdf (==4.2.0)",
    "flask (==3.0.1)",
    "flask-cors (==3.0.10)",
    "sentence-transformers (==3.3.1)",
    "tqdm (==4.67.1)",
    "torch (==2.5.1)",
    "transformers (==4.46.3)",
    "pydantic (>=2.7.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
